Added note about C++11 builds on Windows [skip ci].

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,8 @@ source:
 
 build:
     number: 201
+    # NOTE : For C++11 builds, vc14/VS 2015 are the only acceptable targets
+    # which only Python 3.5 supports. So skip previous Python versions.
     skip: true                # [win and not py35]
     features:
         - vc14                # [win and py35]
