--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,18 +48,28 @@ test:
     - python 3.5.*  # [win and py35]
   commands:
     - test -f $PREFIX/libexec/simbody/simbody-visualizer              # [unix]
+    - if not exist %LIBRARY_BIN%\\simbody-visualizer.exe exit 1       # [win]
     - test -f $PREFIX/include/simbody/Simbody.h                       # [unix]
     - test -f $PREFIX/include/simbody/SimTKcommon.h                   # [unix]
     - test -f $PREFIX/include/simbody/SimTKlapack.h                   # [unix]
     - test -f $PREFIX/include/simbody/SimTKmath.h                     # [unix]
     - test -f $PREFIX/include/simbody/SimTKsimbody_aux.h              # [unix]
     - test -f $PREFIX/include/simbody/SimTKsimbody.h                  # [unix]
+    - if not exist %LIBRARY_INC%\\Simbody.h exit 1                    # [win]
+    - if not exist %LIBRARY_INC%\\SimTKcommon.h exit 1                # [win]
+    - if not exist %LIBRARY_INC%\\SimTKlapack.h exit 1                # [win]
+    - if not exist %LIBRARY_INC%\\SimTKmath.h exit 1                  # [win]
+    - if not exist %LIBRARY_INC%\\SimTKsimbody_aux.h exit 1           # [win]
+    - if not exist %LIBRARY_INC%\\SimTKsimbody.h exit 1               # [win]
     - test -f $PREFIX/lib/libSimTKcommon.so                           # [linux]
     - test -f $PREFIX/lib/libSimTKmath.so                             # [linux]
     - test -f $PREFIX/lib/libSimTKsimbody.so                          # [linux]
     - test -f $PREFIX/lib/libSimTKcommon.dylib                        # [osx]
     - test -f $PREFIX/lib/libSimTKmath.dylib                          # [osx]
     - test -f $PREFIX/lib/libSimTKsimbody.dylib                       # [osx]
+    - if not exist %LIBRARY_BIN%\\libSimTKcommon.dll exit 1           # [win]
+    - if not exist %LIBRARY_BIN%\\libSimTKmath.dll exit 1             # [win]
+    - if not exist %LIBRARY_BIN%\\libSimTKsimbody.dll exit 1          # [win]
 
 about:
     home: https://simtk.org/home/simbody
