--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
@@ -1,12 +1,12 @@
 c_compiler:
 - vs2015
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 cxx_compiler:
 - vs2015
-openblas:
-- 0.2.20
 pin_run_as_build:
-  openblas:
-    max_pin: x.x.x
   vc:
     max_pin: x
 vc:
