Update for conda-build 3

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,6 +36,9 @@ requirements:
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
     host:
+        - {{ compiler('c') }}
+        - {{ compiler('cxx') }}
+    host:
         - blas 1.1 {{ variant }}  # [not win]
         - openblas                        # [not win]
         - freeglut                # [linux]
