--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,11 +1,13 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
+build_number_decrement:
+- '0'
 c_compiler:
 - clang
 channel_sources:
-- conda-forge,defaults
+- conda-forge/label/gcc7,defaults
 channel_targets:
-- conda-forge main
+- conda-forge gcc7
 cxx_compiler:
 - clangxx
 macos_machine:
@@ -17,3 +19,9 @@ openblas:
 pin_run_as_build:
   openblas:
     max_pin: x.x.x
+zip_keys:
+- - c_compiler
+  - cxx_compiler
+  - channel_sources
+  - channel_targets
+  - build_number_decrement
