--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,14 +35,23 @@ requirements:
         - cmake >=3.1.3
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
+        - xorg-libxi
+        - xorg-libxmu
+        - libglu
     host:
         - blas 1.1 {{ variant }}  # [not win]
         - openblas                        # [not win]
         - freeglut                # [linux]
+        - xorg-libxi
+        - xorg-libxmu
+        - libglu
     run:
         - blas 1.1 {{ variant }}  # [not win]
         - openblas                        # [not win]
         - freeglut                # [linux]
+        - xorg-libxi
+        - xorg-libxmu
+        - libglu
 test:
   requires:
     - python 3.5.*  # [win and py35]
