--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,28 +32,28 @@ requirements:
         - cmake >=3.1.3
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
-        - mesa                    # [linux]
-        - libglu                  # [linux]
+        # - mesa                    # [linux]
+        # - libglu                  # [linux]
         - freeglut                # [linux]
-        - xorg-libxi              # [linux]
-        - xorg-libxmu             # [linux]
+        # - xorg-libxi              # [linux]
+        # - xorg-libxmu             # [linux]
         # - doxygen
     host:
         - blas 1.1 {{ variant }}  # [not win]
         - openblas                # [not win]
-        - mesa                    # [linux]
-        - libglu                  # [linux]
+        # - mesa                    # [linux]
+        # - libglu                  # [linux]
         - freeglut                # [linux]
-        - xorg-libxi              # [linux]
-        - xorg-libxmu             # [linux]
+        # - xorg-libxi              # [linux]
+        # - xorg-libxmu             # [linux]
     run:
         - blas 1.1 {{ variant }}  # [not win]
         - openblas                # [not win]
-        - mesa                    # [linux]
-        - libglu                  # [linux]
+        # - mesa                    # [linux]
+        # - libglu                  # [linux]
         - freeglut                # [linux]
-        - xorg-libxi              # [linux]
-        - xorg-libxmu             # [linux]
+        # - xorg-libxi              # [linux]
+        # - xorg-libxmu             # [linux]
         
 test:
   requires:
