--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
         - cmake >=3.1.3
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
-        - mesalib                    # [linux]
+        - mesa                    # [linux]
         # - libglu                  # [linux]
         - freeglut                # [linux]
         # - xorg-libxi              # [linux]
