--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,19 +29,38 @@ build:
 # Simbody includes them. For the visualizer, FreeGLUT is available via
 # anaconda.org. Glut is included with Simbody for Windows and OSX includes a
 # Glut implementation.
+# https://github.com/AnacondaRecipes/r-rgl-feedstock/blob/master/recipe/meta.yaml#L48-L67
 requirements:
     build:
         # CMake 3.8 provides imported targets for OpenGL.
         - cmake >=3.8
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
-        - mesa                    # [linux]
-        - libglu                  # [linux]
-        - freeglut                # [linux]
-        - xorg-libxi              # [linux]
-        - xorg-libxmu             # [linux]
-        - libselinux-cos6-x86_64  # [linux]
+          #        - mesa                    # [linux]
+          #        - libglu                  # [linux]
+          #        - freeglut                # [linux]
+          #        - xorg-libxi              # [linux]
+          #        - xorg-libxmu             # [linux]
+          #        - libselinux-cos6-x86_64  # [linux]
         # - doxygen
+        - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
+        - {{ cdt('mesa-libgl-devel') }}      # [linux]
+        - {{ cdt('libx11-devel') }}          # [linux]
+        - {{ cdt('libxext-devel') }}         # [linux]
+        - {{ cdt('libxrender-devel') }}      # [linux]
+        - {{ cdt('mesa-libgl-devel') }}      # [linux]
+        - {{ cdt('mesa-libegl-devel') }}     # [linux]
+        - {{ cdt('mesa-dri-drivers') }}      # [linux]
+        - {{ cdt('libxau-devel') }}          # [linux]
+        - {{ cdt('libdrm-devel') }}          # [linux]
+        - {{ cdt('libxcomposite-devel') }}   # [linux]
+        - {{ cdt('libxcursor-devel') }}      # [linux]
+        - {{ cdt('libxi-devel') }}           # [linux]
+        - {{ cdt('libxrandr-devel') }}       # [linux]
+        - {{ cdt('libxscrnsaver-devel') }}   # [linux]
+        - {{ cdt('libxtst-devel') }}         # [linux]
+        - {{ cdt('libselinux-devel') }}      # [linux]
+        - {{ cdt('libxdamage') }}            # [linux]
     host:
         - blas 1.1 {{ variant }}  # [not win]
         - openblas                # [not win]
