--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,7 @@ requirements:
         - cmake >=3.1.3
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
-        - doxygen                 # [not linux]
+          # - doxygen                 # [not linux]
     host:
         - blas 1.1 {{ variant }}  # [not win]
         - openblas                # [not win]
