--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,7 +48,7 @@ requirements:
         - {{ cdt('libx11-devel') }}          # [linux]
         - {{ cdt('libxext-devel') }}         # [linux]
         - {{ cdt('libxrender-devel') }}      # [linux]
-        - {{ cdt('mesa-libglu-devel') }}      # [linux]
+        # TODO - {{ cdt('mesa-libglu-devel') }}      # [linux]
         - {{ cdt('mesa-libegl-devel') }}     # [linux]
         - {{ cdt('mesa-dri-drivers') }}      # [linux]
         - {{ cdt('libxau-devel') }}          # [linux]
