--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -70,7 +70,7 @@ requirements:
         - {{ cdt('libxt-devel') }}           # [linux]
         - {{ cdt('libxcb') }}                # [linux]
         - {{ cdt('libxau') }}                # [linux]
-        - {{ cdt('libxxf86vm' }}             # [linux]
+        - {{ cdt('libxxf86vm') }}             # [linux]
 
     host:
         - blas 1.1 {{ variant }}  # [not win]
