--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,24 +1,20 @@
-build_number_decrement:
-- '0'
 c_compiler:
 - gcc
+c_compiler_version:
+- '7'
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 cxx_compiler:
 - gxx
+cxx_compiler_version:
+- '7'
 docker_image:
 - condaforge/linux-anvil-comp7
-openblas:
-- 0.3.3
-pin_run_as_build:
-  openblas:
-    max_pin: x.x.x
-zip_keys:
-- - c_compiler
-  - cxx_compiler
-  - channel_sources
-  - channel_targets
-  - docker_image
-  - build_number_decrement
+libblas:
+- 3.8 *netlib
+libcblas:
+- 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
