--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
@@ -6,6 +6,12 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - vs2015
+libblas:
+- 3.8 *netlib
+libcblas:
+- 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
 pin_run_as_build:
   vc:
     max_pin: x
