libxmu is needed for host

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,6 +66,7 @@ requirements:
         - liblapack
         - libglu                  # [linux]
         - freeglut                # [linux]
+        - xorg-libxmu             # [linux]
     run:
         - libglu                  # [linux]
         - freeglut                # [linux]
