--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,9 +60,7 @@ requirements:
         - {{ cdt('libxau') }}                # [linux]
         - {{ cdt('libxxf86vm') }}            # [linux]
     host:
-        - libblas
-        - libcblas
-        - liblapack
+        - openblas
         - libglu                  # [linux]
         - freeglut                # [linux]
         - xorg-libxmu             # [linux]
@@ -73,7 +71,7 @@ requirements:
 test:
   commands:
     - test -f $PREFIX/libexec/simbody/simbody-visualizer              # [linux]
-    - test -f $PREFIX/libexec/simbody/simbody-visualizer.app/Contents/MacOS/simbody-visualizer  # [linux]
+    - test -f $PREFIX/libexec/simbody/simbody-visualizer.app/Contents/MacOS/simbody-visualizer  # [osx]
     - if not exist %LIBRARY_BIN%\\simbody-visualizer.exe exit 1       # [win]
     - test -f $PREFIX/include/simbody/Simbody.h                       # [unix]
     - test -f $PREFIX/include/simbody/SimTKcommon.h                   # [unix]
