--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,8 +19,7 @@ build:
 
 # NOTE: This installs Simbody and the optional visualizer on Linux, Windows, and
 # OSX. We build against the openblas available in conda-forge which includes
-# lapack on Linux and OSX. blas and lapack are not needed on Windows because
-# Simbody includes them. For the visualizer, FreeGLUT is available via
+# lapack on Linux and OSX. For the visualizer, FreeGLUT is available via
 # anaconda.org. Glut is included with Simbody for Windows and OSX includes a
 # Glut implementation.
 # https://github.com/AnacondaRecipes/r-rgl-feedstock/blob/master/recipe/meta.yaml#L48-L67
