--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -12,8 +12,7 @@ cxx_compiler_version:
 - '7'
 docker_image:
 - condaforge/linux-anvil-comp7
-openblas:
-- 0.3.6
-pin_run_as_build:
-  openblas:
-    max_pin: x.x.x
+libblas:
+- 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
