--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -12,12 +12,11 @@ cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '9'
+libblas:
+- 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
-openblas:
-- 0.3.6
-pin_run_as_build:
-  openblas:
-    max_pin: x.x.x
