--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
     sha256: d371a92d440991400cb8e8e2473277a75307abb916e5aabc14194bea841b804a
 
 build:
-    number: 0
+    number: 1
     run_exports:
         - {{ pin_subpackage('simbody', max_pin='x.x') }}
     # NOTE : This is needed to ensure the paths to Simbody's binaries, like
@@ -66,6 +66,7 @@ requirements:
         - freeglut  # [linux]
         - xorg-libxmu  # [linux]
     run:
+        - openblas  # [win]
         - libglu  # [linux]
         - freeglut  # [linux]
         
@@ -95,6 +96,13 @@ test:
     - if not exist %LIBRARY_BIN%\\SimTKcommon.dll exit 1              # [win]
     - if not exist %LIBRARY_BIN%\\SimTKmath.dll exit 1                # [win]
     - if not exist %LIBRARY_BIN%\\SimTKsimbody.dll exit 1             # [win]
+  files:
+    - test
+  requires:
+    - cmake >=3.8
+    - ninja  # [win]
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
 
 about:
     home: https://simtk.org/home/simbody
