--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ source:
     fn: Simbody-{{ version }}.tar.gz
     url: https://github.com/simbody/simbody/archive/Simbody-{{ version }}.tar.gz
     sha256: d371a92d440991400cb8e8e2473277a75307abb916e5aabc14194bea841b804a
+    patches:
+      - 716.patch
 
 build:
     number: 1
@@ -96,6 +98,8 @@ test:
     - if not exist %LIBRARY_BIN%\\SimTKcommon.dll exit 1              # [win]
     - if not exist %LIBRARY_BIN%\\SimTKmath.dll exit 1                # [win]
     - if not exist %LIBRARY_BIN%\\SimTKsimbody.dll exit 1             # [win]
+    # Regression test for https://github.com/conda-forge/simbody-feedstock/issues/39
+    - if exist %LIBRARY_INC%\\dirent.h exit 1                    # [win]
   files:
     - test
   requires:
