--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
         # CMake 3.8 provides imported targets for OpenGL.
         - cmake >=3.8
         - ninja  # [win]
+        - make  # [unix]
         - doxygen
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
