--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,9 @@
 compiler_stack: comp7
 conda_forge_output_validation: true
 build_platform:
-   osx_arm64: osx_64
+  osx_arm64: osx_64
 test_on_native_only: true
 provider: {linux_aarch64: default}
+github:
+  branch_name: main
+  tooling_branch_name: main
